Fix bug where vbook links don't wrap around line-breaks

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -400,7 +400,7 @@ em, i {
 }
 
 .hover-link {
-  display: inline-block;
+  display: inline;
 }
 
 .hover-card {
